# agent-instability-notes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-tests.yml
concepts/: 00_overview.md  correction-and-recovery-loop.md  early-instability-signals.md  instability-patterns_catalog.md  nested-tool-inconsistency.md  trace-tree-divergence.md
data/sample_configs/: instability_heuristics.yaml  latency_thresholds.yaml
examples/: README.md  long-horizon-toy-agent.md  tool-chain-instability.md  workflow-looping.md
metrics/: _shared_definitions.md  failover-frequency.md  post-correction-relapse-rate.md  recovery-turn-distance.md  relative-latency-gap.md  session-closure-profile.md
notebooks/: 01_inspect_trace_tree.ipynb  02_early_instability_metrics.ipynb  03_visualize_trace_divergence.ipynb
scripts/: compute_metrics_from_jsonl.py  trace_tree_sanity_checks.py
synthetic_traces/: README.md  generate_synthetic_traces.py
