[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-instability-notes"
version = "0.1.0"
description = "Lightweight tools for inspecting early instability signals in multi-turn agents."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 140
extend-exclude = "scripts/trace_tree_sanity_checks\.py"

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "W"]
